--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^7.6.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
