--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.57.0",
     "react-router-dom": "^7.6.1",
     "socket.io-client": "^4.8.1",
